--- a/TermsofUse.html
+++ b/TermsofUse.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -43,9 +44,12 @@
             </section>
 
             <footer class="mt-16 pt-4 border-t border-gray-100 text-center">
-                <p class="text-[4px] text-gray-300 uppercase tracking-[0.2em] font-bold">© 2024 ChromaSVG Professional • Ultra-Minimal Policy</p>
+                <p class="text-[4px] text-gray-300 uppercase tracking-[0.2em] font-bold">© <span id="current-year">2024</span> ChromaSVG Professional • Ultra-Minimal Policy</p>
             </footer>
         </main>
     </div>
+    <script>
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
